// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiAvatar allows a name composed entirely of whitespace 1`] = `
<div
  aria-label="aria-label"
  class="euiAvatar euiAvatar--m euiAvatar--user testClass1 testClass2"
  data-test-subj="test subject string"
  style="background-image:none;background-color:#DB1374;color:#FFFFFF"
  title="  "
>
  <span
    aria-hidden="true"
  >
      
  </span>
</div>
`;

exports[`EuiAvatar is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiAvatar euiAvatar--m euiAvatar--user testClass1 testClass2"
  data-test-subj="test subject string"
  style="background-image:none;background-color:#FEB6DB;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props color is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user"
  style="background-image:none;background-color:#000;color:#FFFFFF"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props imageUrl is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user"
  style="background-image:url(image url);background-color:#FEB6DB;color:#000000"
  title="name"
/>
`;

exports[`EuiAvatar props initials is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user"
  style="background-image:none;background-color:#FEB6DB;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    l
  </span>
</div>
`;

exports[`EuiAvatar props initialsLength is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user"
  style="background-image:none;background-color:#FEB6DB;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    na
  </span>
</div>
`;

exports[`EuiAvatar props size l is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--l euiAvatar--user"
  style="background-image:none;background-color:#FEB6DB;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props size m is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user"
  style="background-image:none;background-color:#FEB6DB;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props size none is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--user"
  style="background-image:none;background-color:#FEB6DB;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props size s is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--s euiAvatar--user"
  style="background-image:none;background-color:#FEB6DB;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props size xl is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--xl euiAvatar--user"
  style="background-image:none;background-color:#FEB6DB;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props type is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--space"
  style="background-image:none;background-color:#FEB6DB;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar should throw error if color is not a hex 1`] = `"EuiAvatar needs to pass a valid color. This can either be a three or six character hex value"`;
